[package]
name = "webthing"
version = "0.15.0"
authors = ["WebThingsIO <team@webthings.io>"]
repository = "https://github.com/WebThingsIO/webthing-rust"
homepage = "https://github.com/WebThingsIO/webthing-rust"
license = "MPL-2.0"
readme = "README.md"
description = "Implementation of an HTTP Web Thing."
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0.0"
actix-web-actors = "4.0.0"
chrono = "0.4"
futures = "0.3"
if-addrs = "0.7"
hostname = "0.3"
libmdns = "0.6"
openssl = { version = "0.10", optional = true }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
valico = "3.5"

[dev-dependencies]
actix-rt = "2.6"
env_logger = "0.9"
rand = "0.8"

[features]
default = []
ssl = ["actix-web/openssl", "openssl"]
