[package]
name = "webthing"
version = "0.15.1"
authors = ["WebThingsIO <team@webthings.io>"]
repository = "https://github.com/WebThingsIO/webthing-rust"
homepage = "https://github.com/WebThingsIO/webthing-rust"
license = "MPL-2.0"
readme = "README.md"
description = "Implementation of an HTTP Web Thing."
edition = "2021"

[dependencies]
actix = { version = "0.13", optional = true }
actix-web = { version = "4.0.0", optional = true }
actix-web-actors = { version = "4.0.0", optional = true }
chrono = { version = "0.4.22", default_features = false, features = ["std"] }
futures = { version = "0.3", optional = true }
hostname = { version = "0.3", optional = true }
if-addrs = { version = "0.7", optional = true }
libmdns = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
valico = "3.5"

[dev-dependencies]
actix-rt = "2.6"
env_logger = "0.9"
rand = "0.8"

[features]
default = ["actix"]
actix = [
    "dep:actix",
    "actix-web",
    "actix-web-actors",
    "futures",
    "if-addrs",
    "hostname",
    "libmdns",
]
ssl = ["actix", "actix-web/openssl", "openssl"]
