[package]
name = "multiple-things"
version = "0.1.0"
authors = ["Mozilla IoT <iot@mozilla.com>"]
repository = "https://github.com/mozilla-iot/webthing-rust"
homepage = "https://github.com/mozilla-iot/webthing-rust"
license = "MPL-2.0"
description = "Example server with multiple web things."

[dependencies]
env_logger = "0.5"
rand = "0.4"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4"] }
webthing = { path = "../.." }

[[bin]]
name = "multiple-things"
path = "multiple-things.rs"
